--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     padding-top: 800px;
+    text-align: center;
+    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
 }
 .profile{
     width: 175px;
@@ -84,4 +86,19 @@ h6{
 }
 .link:hover {
      background-color: blue;
+}
+.article{
+     font-size: 30px;
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
+     cursor: pointer;
+}
+#contacts {
+     background: firebrick;
+}
+#contacts iframe {
+     width: 100%;
+}
+.contact_1 h3 {
+     display: inline;
+     font-size: 30px;
 }
